little problems were fixed